--- a/style-producto.css
+++ b/style-producto.css
@@ -1,39 +1,39 @@
-*{
+* {
     box-sizing: border-box;
-    margin:0;
+    margin: 0;
     padding: 0;
     font-family: sans-serif;
 }
 
 
-img{
+img {
     width: 100%;
 }
 
-.img-logo{
+.img-logo {
     max-width: 7rem;
     border-radius: 200px;
     border: 0.3rem solid rgb(240, 16, 16);
 }
 
-header{
+header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 2rem;
     background-color: #264653;
-    
+
 
 }
 
-.nav-list{
+.nav-list {
     list-style-type: none;
     display: flex;
     gap: 5rem;
 
 }
 
-.nav-list li a{
+.nav-list li a {
     text-decoration: none;
     color: #f9f5f5;
     font-weight: bold;
@@ -41,12 +41,12 @@ header{
 }
 
 .abrir-menu,
-.cerrar-menu  {
+.cerrar-menu {
     display: none;
 
 }
 
-.caja-container{
+.caja-container {
     height: 50rem;
     width: 100%;
     background-color: #E9C46A;
@@ -59,7 +59,7 @@ header{
 
 
 
-.caja-container.container{
+.caja-container.container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -68,7 +68,7 @@ header{
 
 }
 
-.container{
+.container {
 
     height: 25rem;
     display: flex;
@@ -78,7 +78,7 @@ header{
 }
 
 
-.container img{
+.container img {
     max-width: 7.2rem;
     margin: .80rem 0.5rem;
     padding-left: 0.5rem;
@@ -87,14 +87,15 @@ header{
 
 }
 
-.container.a-p{
+.container.a-p {
     display: flex;
     font-weight: bold;
     font-size: 0.5rem;
-    
+
 }
 
-.a-comprar, .a-p{
+.a-comprar,
+.a-p {
     color: #0b0b0b;
     font-size: 0.9rem;
     text-align: center;
@@ -104,10 +105,11 @@ header{
 
 @keyframes polygon-in-opposing-corners {
     from {
-    clip-path: polygon(0 0, 50% 50%, 100% 100%, 50% 50%);
+        clip-path: polygon(0 0, 50% 50%, 100% 100%, 50% 50%);
     }
+
     to {
-    clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 0);
+        clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 0);
     }
 }
 
@@ -117,134 +119,141 @@ header{
 
 /******Viewport  máximo 500px**********/
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 500px) {
     .abrir-menu,
-    .cerrar-menu{
-    display: block;
-    border: 2rem;
-    font-size: 1.4rem;
-    background-color: transparent;
+    .cerrar-menu {
+        display: block;
+        border: 2rem;
+        font-size: 1.8rem;
+        background-color: transparent;
     }
 
-    .nav{
-    opacity: 0;
-    visibility: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    gap: 1rem;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #2A9D8F;
-    padding: 1rem;
-    box-shadow: 0 0 0 100vmax black(0, 0, 0, .5);
-    opacity: 1;
+
+    .nav {
+        opacity: 0;
+        visibility: hidden;
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        gap: 1rem;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #2A9D8F;
+        padding: 0.5rem;
+        box-shadow: 0 0 0 100vmax black(0, 0, 0, .5);
+        opacity: 1;
 
     }
-    .container{
 
-    height: 30rem;
-    display: flex;
-    flex-direction: column;
-    background-color: #E9C46A;
-    align-items: center;
+
+
+
+    .container {
+        height: 30rem;
+        display: flex;
+        flex-direction: column;
+        background-color: #E9C46A;
+        align-items: center;
     }
 
-    .nav.visible{
-    opacity: 1;
-    visibility: visible;
+
+
+    .nav.visible {
+        opacity: 1;
+        visibility: visible;
     }
 
-    .nav-list{
-    flex-direction: column;
-    align-items: end;
+    .nav-list {
+        flex-direction: column;
+        align-items: end;
     }
+
     .nav-list li a {
-    color: rgb(14, 13, 13);
+        color: rgb(14, 13, 13);
     }
 
-    
+
 }
 
-/****************************************/
+/******Viewport 700px***************/
 
-@media screen and(max-width: 600px){
-    .abrir-menu,
-    .cerrar-menu{
-    display: block;
-    border: 2rem;
-    font-size: 1.4rem;
-    background-color: transparent;
-    }
-    
-    .caja-container{
-    display: block;
-    align-items: center;
-    background-color: #E9C46A;
+@media screen and (min-width: 700px) {
+    .abrir-menu
+    .cerrar-menu {
+        display: block;
+        border: 2rem;
+        font-size: 1.8rem;
+        background-color: transparent;
     }
 
-    .container{
-    
-    height: 35rem;
-    display: block;
-    background-color: #E9C46A;
+
+    .caja-container {
+        display: flex;
+
+    }
+
+
+    .nav.visible {
+        opacity: 1;
+        visibility: hidden;
+    }
+
+    .nav-list li a {
+        font-size: 1.5rem;
+        gap: 12rem;
+        color: rgb(248, 247, 247);
         
     }
 
-
-    .nav{
-    opacity: 0;
-    visibility: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    gap: 1rem;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #2A9D8F;
-    padding: 1rem;
-    box-shadow: 0 0 0 100vmax black(0, 0, 0, .5);
-    opacity: 1;
-
+    .abrir-menu, .cerrar-menu{
+        display: none;
     }
 
-    .nav.visible{
-    opacity: 1;
-    visibility: visible;
+    .img-logo {
+        max-width: 8rem;
+        border-radius: 200px;
+        border: 0.3rem solid rgb(240, 16, 16);
     }
-
-    .nav-list{
-    flex-direction: column;
-    align-items: end;
-    }
-    .nav-list li a {
-    color: rgb(14, 13, 13);
-    }
-
-    .img-logo{
-    max-width: 8.2rem;
-    border-radius: 200px;
-    border: 0.3rem solid rgb(240, 16, 16);
-    }
-
-    .container img{
-    max-width: 9rem;
-    margin: .80rem 0.5rem;
-    padding-left: 0.5rem;
-    border-radius: none;
-    box-shadow: 3.5px 3.5px 3.5px 3.5px #1f1f21;
     
+    .container img {
+        max-width: 12rem;
+        margin: .80rem 0.5rem;
+        padding-left: 0.5rem;
+        border-radius: none;
+        box-shadow: 3.5px 3.5px 3.5px 3.5px #1f1f21;
+
     }
 
-    .a-comprar, .a-p{
-    color: #0b0b0b;
-    font-size: 1.2rem;
-    text-align: center;
-    font-weight: bold;
+
+    .container {
+        height: 25rem;
+        display: flex;
+        flex-direction: row;
+        background-color: #E9C46A;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        grid-column-gap: 30rem;
+        row-gap: 5rem;
+    }
+
+
+    .container.a-p {
+        display: flex;
+        font-weight: bold;
+        font-size: 1rem;
+        margin-top: -50px;
+    }
+
+    .a-comprar,
+    .a-p {
+        color: #0b0b0b;
+        font-size: 1.2rem;
+        text-align: center;
+        font-weight: bold;
+        margin-bottom: -20px;
     }
 
 }
