--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
     margin:0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Heebo', sans-serif;
+    font-family: 'Merriweather', serif;
 }
 
 body{
@@ -17,7 +18,7 @@ img{
 }
 
 .img-logo{
-    max-width: 6.5rem;
+    max-width: 7rem;
     border-radius: 200px;
     border: 0.3rem solid rgb(240, 16, 16);
 }
@@ -43,7 +44,7 @@ header{
     text-decoration: none;
     color: #f9f5f5;
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .abrir-menu,
@@ -52,9 +53,7 @@ header{
 
 }
 
-.caja-container{
-    background-color: #E9C46A;
-}
+
 
 .caja-container.container{
     display: flex;
@@ -66,35 +65,69 @@ header{
 
 .container{
 
-    height: 26.2rem;
-    display: flex;
-    align-content: space-between;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: #E9C46A;
-}
+    height: 40rem;
+    display: grid;
+    grid-template-rows: repeat(4, max-width(auto));
+    background-color: #FFFFFF;
+    background-image: linear-gradient(0deg, #FFFFFF 0%, #6284FF 50%, #FF0000 100%);
+    gap: 1px;
 
-.container img{
-    max-width: 5rem;
-    margin: .80rem 0.5rem;
-    padding-left: 0.5rem;
-    box-shadow: 3px 3px 3px #1f1f21;
-    align-items: center; 
     
 }
-.container.a-p{
-    display: flex;
+
+.motos{
+    margin-top: 1rem;
+    margin-left: 2rem;
+    max-width: 22rem;
+    animation-name: mover ;
+    animation-duration: 1.5s ;
+}
+
+.banner{
+    font-size: 1.6rem;
+    margin-top: 2rem;
+    margin-left: 0.4rem;
+    animation-name: mover ;
+    animation-duration: 2.5s;
+    color: #09203f;
+    text-align: left;
     font-weight: bold;
-    font-size: 0.81rem;
+}
+
+.banner-2{
+    font-size: 1.6rem;
+    margin-bottom: 2rem;
+    margin-left: 7rem;
+    animation-name: mover ;
+    animation-duration: 3.5s; 
+    color: #09203f;
+    text-align: left;
+    font-weight: bold;
+}
+
+.banner-3{
+    font-size: 2rem;
+    margin-left: 0.2rem;
+    animation-name: mover ;
+    animation-duration: 4s; 
+    color: #09203f;
+    text-align: center;
+    font-weight: bold;
+}
+
+.floor{
+    background-color: rgb(7, 7, 6);
+}
+
+.registro{
+    color: rgb(248, 245, 245);
+    font-size: 0.9rem;
+    font-weight: bold;
+    text-align: center;
     
 }
 
-.a-comprar, .a-p{
-    color: #0b0b0b;
-    font-size: 0.9rem;
-}
+
 
 
 @keyframes polygon-in-opposing-corners {
@@ -106,17 +139,42 @@ header{
     }
 }
 
-[transition-style="in:polygon:opposing-corners"] {
-    animation: 2.5s cubic-bezier(.25, 1, .30, 1) polygon-in-opposing-corners both;
+@keyframes wipe-in-left {
+    from {
+    clip-path: inset(0 0 0 100%);
+    }
+    to {
+    clip-path: inset(0 0 0 0);
+    }
+}
+[transition-style="in:wipe:left"] {
+    animation: 6s cubic-bezier(4, 1, .30, 1) wipe-in-left both;
 }
 
+@keyframes mover{
+    0%{
+        transform: translate(0);
+    }
+
+    50%{
+        transform: translate(125%, 15%);
+    }
+
+    75%{
+        transform: translate(-600%);
+    }
+
+    100%{
+        transform: translate(0);
+    }
+}
 
 @media screen and (max-width: 550px){
     .abrir-menu,
     .cerrar-menu{
     display: block;
     border: 2rem;
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     background-color: transparent;
     }
 
@@ -133,7 +191,7 @@ header{
         bottom: 0;
         background-color: #2A9D8F;
 
-        padding: 2rem;
+        padding: 0.5rem;
         box-shadow: 0 0 0 100vmax black(0, 0, 0, .5);
         opacity: 1;
 
@@ -151,17 +209,89 @@ header{
     .nav-list li a {
         color: rgb(14, 13, 13);
     }
+
+    .nav-list li a{
+        text-decoration: none;
+        color: #f9f5f5;
+        font-weight: bold;
+        font-size: 1rem;
+    }
+
+    .container{
+
+        height: 40rem;
+        display: grid;
+        grid-template-rows: repeat(4, max-width(auto));
+        background-color: #FFFFFF;
+        background-image: linear-gradient(0deg, #FFFFFF 0%, #6284FF 50%, #FF0000 100%);
+        gap: 1px;
+    
+        
+    }
+    
+    .motos{
+        max-width: 22rem;
+        margin-top: 1rem;
+        margin-left: 2rem;
+        animation-name: mover ;
+        animation-duration: 1.5s ;
+    }
+    
+    .banner{
+        font-size: 1.6rem;
+        margin-top: 2rem;
+        margin-left: 0.4rem;
+        animation-name: mover ;
+        animation-duration: 2.5s;
+        color: #09203f;
+        text-align: left;
+        font-weight: bold;
+    }
+    
+    .banner-2{
+        font-size: 1.6rem;
+        margin-bottom: 2rem;
+        margin-left: 7rem;
+        animation-name: mover ;
+        animation-duration: 3.5s; 
+        color: #09203f;
+        text-align: left;
+        font-weight: bold;
+    }
+    
+    .banner-3{
+        font-size: 2rem;
+        margin-left: 0.2rem;
+        animation-name: mover ;
+        animation-duration: 4s; 
+        color: #09203f;
+        text-align: center;
+        font-weight: bold;
+    }
+    
+    .floor{
+        background-color: rgb(7, 7, 6);
+    }
+    
+    .registro{
+        color: rgb(248, 245, 245);
+        font-size: 0.9rem;
+        font-weight: bold;
+        text-align: center;
+        
+    }
+    
 }
 
-/*Viewport 780px*/
+/*Viewport 700px*/
 
-@media screen and (min-width: 780px){
+@media screen and (min-width: 700px){
 .abrir-menu,
 .cerrar-menu{
-display: block;
-border: 2rem;
-font-size: 1.4rem;
-background-color: transparent;
+    display: block;
+    border: 2rem;
+    font-size: 1.4rem;
+    background-color: transparent;
 }
 
 .img-logo{
@@ -172,13 +302,6 @@ background-color: transparent;
 
 
 
-.container img{
-    max-width: 9rem;
-    
-    box-shadow: 5px 5px 5px #1f1f21;
-    align-items: center; 
-    margin: 0 auto;
-}
 
 .nav.visible{
     opacity: 1;
@@ -195,24 +318,82 @@ background-color: transparent;
     display: none;
 }
 
-.container.a-p{
-    display: flex;
+.nav-list li a{
+    text-decoration: none;
+    color: #f9f5f5;
     font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.container{
+
+    height: 45rem;
+    display: grid;
+    grid-template-rows: repeat(4, max-width(auto));
+    background-color: #FFFFFF;
+    background-image: linear-gradient(0deg, #FFFFFF 0%, #6284FF 50%, #FF0000 100%);
+    gap: 1px;
+
     
 }
 
-.a-comprar, .a-p{
-    color: #0b0b0b;
-    font-size: 1.1rem;
-    margin-bottom: 20px;
-    gap: 10px;
+.motos{
+    max-width: 30rem;
+    margin-top: 1rem;
+    margin-left: 10rem;
+    animation-name: mover ;
+    animation-duration: 1.5s ;
+}
+
+.banner{
+    font-size: 2rem;
+    margin-top: 2rem;
+    margin-left: 0.4rem;
+    animation-name: mover ;
+    animation-duration: 2.5s;
+    color: #09203f;
+    text-align: left;
+    font-weight: bold;
+}
+
+.banner-2{
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    margin-left: 20rem;
+    animation-name: mover ;
+    animation-duration: 3.5s; 
+    color: #09203f;
+    text-align: left;
+    font-weight: bold;
+}
+
+.banner-3{
+    font-size: 2.7rem;
+    margin-left: 0.2rem;
+    animation-name: mover ;
+    animation-duration: 4s; 
+    color: #09203f;
+    text-align: center;
+    font-weight: bold;
+}
+
+.floor{
+    background-color: rgb(7, 7, 6);
+}
+
+.registro{
+    color: rgb(248, 245, 245);
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+    
 }
 
 }
 
-/* Viewport 1300px*/
+/* Viewport 1200px*/
 
-@media screen and (min-width: 1300px){
+@media screen and (min-width: 1200px){
 .abrir-menu,
 .cerrar-menu{
 display: block;
@@ -227,15 +408,6 @@ background-color: transparent;
     border: 0.3rem solid rgb(240, 16, 16);
 }
 
-
-.container img{
-    max-width: 10rem;
-    margin: 1.1rem 0.5rem;
-    padding-left: 0.5rem;
-    box-shadow: 5px 5px 5px #1f1f21;
-    align-items: center; 
-    
-}
 
 .nav.visible{
     opacity: 1;
@@ -253,14 +425,76 @@ background-color: transparent;
     display: none;
 }
 
-.container.a-p{
-    display: flex;
+.nav-list li a{
+    text-decoration: none;
+    color: #f9f5f5;
     font-weight: bold;
-    font-size: 8rem;
+    font-size: 1.8rem;
 }
 
-.a-comprar, .a-p{
-    color: #0b0b0b;
-    font-size: 1.3rem;
-}    
+
+.container{
+
+    height: 45rem;
+    display: grid;
+    grid-template-rows: repeat(4, max-width(auto));
+    background-color: #FFFFFF;
+    background-image: linear-gradient(0deg, #FFFFFF 0%, #6284FF 50%, #FF0000 100%);
+    gap: 1px;
+
+    
+}
+
+.motos{
+    max-width: 35rem;
+    margin-top: 1rem;
+    margin-left: 38rem;
+    animation-name: mover ;
+    animation-duration: 1.5s ;
+}
+
+.banner{
+    font-size: 4rem;
+    margin-top: 2rem;
+    margin-left: 0.4rem;
+    animation-name: mover ;
+    animation-duration: 2.5s;
+    color: #09203f;
+    text-align: left;
+    font-weight: bold;
+}
+
+.banner-2{
+    font-size: 4rem;
+    margin-bottom: 2rem;
+    margin-left: 60rem;
+    animation-name: mover ;
+    animation-duration: 3.5s; 
+    color: #09203f;
+    text-align: left;
+    font-weight: bold;
+}
+
+.banner-3{
+    font-size: 5rem;
+    margin-left: 0.2rem;
+    animation-name: mover ;
+    animation-duration: 4s; 
+    color: #09203f;
+    text-align: center;
+    font-weight: bold;
+}
+
+.floor{
+    background-color: rgb(7, 7, 6);
+}
+
+.registro{
+    color: rgb(248, 245, 245);
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-align: center;
+    
+}
+
 }
